--- a/ebookGenerator/resources/StaticFiles/xpp/scss/Primary Source/main content.scss
+++ b/ebookGenerator/resources/StaticFiles/xpp/scss/Primary Source/main content.scss
@@ -114,7 +114,7 @@
         display: inline;
         margin: 0;
     }
-    .primary_hierarchy_front>.generated_toc>.full_toc>.toc_primary_hierarchy>.toc_primary_section>a>& {
+    .primary_hierarchy_body>.primary_hierarchy>.primary_hierarchy_front>.generated_toc>.full_toc>.toc_primary_hierarchy>.toc_primary_section>a>& {
         text-align: center;
     }
     .primary_hierarchy>.primary_hierarchy_body>.primary_section>.primary_section_front>& * {
